# pptx2md

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
pptx2md/: __init__.py  __main__.py  columns.py  custom.scss  entry.py  global_var.py  image.py  log.py  multi_column.py  outputter.py  parser.py  prueba_optim.py  prueba_pptx.py  tools.py  types.py  utils.py  utils_optim.py
