[tool.poetry]
name = "pptx2md"
version = "1.6.1"
description = "This package converts pptx to markdown"
repository = "https://github.com/ssine/pptx2md"
authors = ["Liu Siyao <liu.siyao@qq.com>"]
license = "MIT Licence"

[tool.poetry.scripts]
pptx2md = "pptx2md.__main__:main"

[tool.poetry.dependencies]
python = ">=3.7,<4"
python-pptx = ">=0.6.18"
rapidfuzz = ">=0.10.0"
Pillow = ">=6.0.0"
tqdm = ">=4"

[tool.poetry.group.dev.dependencies]
yapf = "^0.43.0"
isort = {version = ">=5.0.0", python = ">=3.8"}
pycln = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.isort]
profile = "hug"
line_length = 120

[tool.pycln]
path = "pptx2md/"
all = true
